# smdsp-data-collection-system

./: .env.4chan  .env.reddit  .gitignore  CREDITS.md  README.md  Research_questions.md  Social Media Server Setup.md  main.py  pyproject.toml
4chan_crawler/: .env  __init__.py  backfill_enqueue_unscored.py  board_crawler.py  chan_client.py  cold_start_board.py  cold_start_crawler.py  cold_start_thread.py  constants.py  crawler.py  faktory.py  logger.py  thread_crawler.py  toxicity.py  toxicity_consumer.py
4chan_crawler/Documentation/: All_threads_response.json  Boards_response.json  Boards_response_example.json  Post_response_example.json  Threads_response_example.json
4chan_crawler/constants/: api_constants.py  constants.py  errors_constants.py  plsql_constants.py
4chan_crawler/migrations/: 20251013212255_boards.up.sql  20251021182517_create_threads_table.up.sql  20251024033313_posts.up.sql  20251109000918_add_toxicity_column.sql
4chan_crawler/modal/: post_toxicity.py  posts.py  toxicity.py
4chan_crawler/script/: backfill_enqueue_unscored.py  generate_hourly_data_collected_plot.py
4chan_crawler/utils/: faktory.py  logger.py  perspective.py  plsql.py  toxicity.py
generate_plots/: .env  mean_toxicity.py
generate_plots/constants/: constants.py  plsql_constants.py
generate_plots/utils/: charts.py  (+2 more)
reddit_crawler/: .env  cold_start_community.py  cold_start_crawler.py  comments_crawler.py  communities_crawler.py  constants.py  crawler.py  logger.py  logger_factory.py  main.py  posts_crawler.py  reddit_client.py  subreddit_crawler.py  toxicity_consumer.py
(+21 files in other folders)
