[project]
name = "data-collection-system-socialmediaavengers"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "psycopg2>=2.9.11",
    "pyfaktory>=0.2.10",
    "python-dotenv>=1.1.1",
    "requests>=2.32.5",
    "ruff>=0.13.3",
]
